--- a/src/Avatarstyle.css
+++ b/src/Avatarstyle.css
@@ -1,18 +1,26 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+.mainpage {
+    width: 95%;
+    height: 100vh;
+    font-family: 'Raleway', ;
+}
+
 .AvatarClass img{
     width: 200px;
     height: 200px;   
+    
 }
 .button{
     display: flex;
     justify-content: center;
     text-align: center;
-    align-self: center
+    align-self: center;
 }
 .button{
     transform: (-50% -50%);
 }
 .button{
-    background: none;
+    background: #444455;
     border: 1px solid black;
     color: #ccc ;
     width: 240px;
@@ -23,5 +31,5 @@
     overflow: hidden;
 }
 .button:focus{
-    outline: none;
+    outline:navy;
 }
